--- a/requirements.txt
+++ b/requirements.txt
@@ -14,15 +14,10 @@ cssselect==1.1.0
 cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
-Django==3.0.7
 dominate==2.6.0
 entrypoints==0.3
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
-gast==0.3.3
-google-auth==1.20.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
 grpcio==1.30.0
 gunicorn==20.0.4
 h5py==2.10.0
@@ -64,7 +59,6 @@ parso==0.6.1
 patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.0.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.3
 protobuf==3.12.4
@@ -74,7 +68,6 @@ pyasn1-modules==0.2.8
 Pygments==2.5.2
 pyparsing==2.4.6
 pyrsistent==0.15.7
-pytesseract==0.3.2
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
@@ -83,14 +76,13 @@ regex==2020.7.14
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.6
-scikit-learn==0.23.1
 scipy==1.4.1
 seaborn==0.10.1
 selenium==3.141.0
 Send2Trash==1.5.0
 Shapely==1.7.1
 six==1.14.0
-sklearn==0.0
+sklearn==0.
 sqlparse==0.3.1
 statsmodels==0.11.1
 tensorboard==2.3.0
@@ -110,5 +102,4 @@ wcwidth==0.1.8
 webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
-xgboost==1.1.1
 zipp==2.1.0
